--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -52,3 +52,15 @@ h3 {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
 		"Helvetica Neue", sans-serif;
 }
+
+.info-icon-format {
+    padding: 10px;
+    background: rgba(4, 94, 100, 0.377);
+    color: white;
+    min-width: 50px;
+    text-align: center;
+}
+
+.icon-format {
+	cursor: pointer;
+}
