changes for lazy-loading modules

--- a/src/components/forgot-password/forgot-password.component.html
+++ b/src/components/forgot-password/forgot-password.component.html
@@ -27,7 +27,7 @@
                                 placeholder="Enter new password" name="newPassword" [ngModel]=newPassword 
                                 (keyup)="comparePasswords(forgotPasswordForm.controls.oldPassword.value,
                                 forgotPasswordForm.controls.newPassword.value, forgotPasswordForm.controls.confirmPassword.value)" required>
-                            <i class="fa fa-info info-icon-format" [ngbTooltip]="list"></i>
+                            <!-- <i class="fa fa-info info-icon-format" [ngbTooltip]="list"></i> -->
                         </div>
                         <pre class="error-text-format">{{(!forgotPasswordForm.controls.newPassword.valid && forgotPasswordForm.controls.newPassword.dirty) 
                                 || (forgotPasswordForm.controls.newPassword.touched && !forgotPasswordForm.controls.newPassword.valid)
