--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -1,5 +1,5 @@
 <app-layout>
-    <mat-sidenav-container>
+    <mat-sidenav-container class="background-format">
         <mat-sidenav #sidenav role="navigation">
             <!--this is a place for us to add side-nav code-->
             <app-sidenav-list (sidenavClose)="sidenav.close()"></app-sidenav-list>
