--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,5 @@
+/* Importing Bootstrap SCSS file. */
+@import "~bootstrap/scss/bootstrap";
 /* You can add global styles to this file, and also import other style files */
 .warning-text-format {
 	color: #fcba03;
@@ -43,24 +45,29 @@ body {
 
 label {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-		"Helvetica Neue", sans-serif;
+	font-family: "Roboto";
 }
 
 h3 {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-		"Helvetica Neue", sans-serif;
+	font-family: "Roboto-Medium";
 }
 
 .info-icon-format {
-    padding: 10px;
-    background: rgba(4, 94, 100, 0.377);
-    color: white;
-    min-width: 50px;
-    text-align: center;
+	padding: 10px;
+	background: rgba(4, 94, 100, 0.377);
+	color: white;
+	min-width: 50px;
+	text-align: center;
 }
 
 .icon-format {
 	cursor: pointer;
 }
+
+body {
+	background: repeating-linear-gradient(45deg, #606dbc, #606dbc 10px, #465298 10px, #465298 20px);
+}
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
