changes for get my profile

--- a/src/components/navigation/header/header.component.html
+++ b/src/components/navigation/header/header.component.html
@@ -4,7 +4,7 @@
             <button mat-icon-button (click)="onToggleSidenav()">
                 <i class="fa fa-bars navigation-icon-format"></i>
             </button>
-            <label class="navigation-title-format">Tech Stack</label>
+            <label class="navigation-title-format">Project Management System</label>
         </div>
     </div>
     <div fxHide.gt-xs style="margin-left: auto;">
