--- a/src/components/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/components/navigation/sidenav-list/sidenav-list.component.html
@@ -6,10 +6,13 @@
         <i class="fa fa-user-circle icon"></i> <span class="nav-caption">My Profile</span>
     </a>
     <mat-list-item [matMenuTriggerFor]="menu">
-        <i class="fa fa-home icon"></i>&nbsp; <a matline>Example</a>
+        <i class="fa fa-tasks icon"></i>&nbsp; <a matline>Project</a>
     </mat-list-item>
     <mat-menu #menu="matMenu">
-        <button mat-menu-item (click)="onSidenavClose()">View profile</button>
-        <button mat-menu-item (click)="onSidenavClose()">Add contact</button>
+        <button mat-menu-item (click)="onSidenavClose()">Incidents</button>
+        <button mat-menu-item (click)="onSidenavClose()">Technical Workflow</button>
+        <button mat-menu-item (click)="onSidenavClose()">Functional Workflow</button>
+        <button mat-menu-item (click)="onSidenavClose()">Estimation & Billing</button>
+        <button mat-menu-item (click)="onSidenavClose()">SOW</button>
     </mat-menu>
 </mat-nav-list>
