change in path module

--- a/src/views/home/home.component.html
+++ b/src/views/home/home.component.html
@@ -8,6 +8,11 @@
             <!--in here all the content must reside. We will add a navigation header as well-->
             <main>
                 <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
+                <span class="shadow-host">
+                    <a href="https://twitter.com/ireaderinokun">
+                       Follow @ireaderinokun
+                    </a>
+                  </span>
                 <router-outlet></router-outlet>
             </main>
         </mat-sidenav-content>
