--- a/src/views/home/home.component.html
+++ b/src/views/home/home.component.html
@@ -13,6 +13,7 @@
             Follow @ireaderinokun
           </a>
         </span>
+        {{emailId}}
         <router-outlet></router-outlet>
       </main>
     </mat-sidenav-content>
