--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,8 +33,8 @@
 
 <!-- <div class="content" role="main"> -->
 
-  <!-- Highlight Card -->
-  <!-- <div class="card highlight-card card-small">
+<!-- Highlight Card -->
+<!-- <div class="card highlight-card card-small">
 
     <svg id="rocket" xmlns="http://www.w3.org/2000/svg" width="101.678" height="101.678" viewBox="0 0 101.678 101.678">
       <title>Rocket Ship</title>
@@ -64,11 +64,11 @@
 
   </div> -->
 
-  <!-- Resources -->
-  <!-- <h2>Resources</h2>
+<!-- Resources -->
+<!-- <h2>Resources</h2>
   <p>Here are some links to help you get started:</p> -->
 
-  <!-- <div class="card-container">
+<!-- <div class="card-container">
     <a class="card" target="_blank" rel="noopener" href="https://angular.io/tutorial">
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z" />
@@ -107,13 +107,13 @@
 
   </div> -->
 
-  <!-- Next Steps -->
-  <!-- <h2>Next Steps</h2>
+<!-- Next Steps -->
+<!-- <h2>Next Steps</h2>
   <p>What do you want to do next with your app?</p> -->
 
-  <!-- <input type="hidden" #selection> -->
+<!-- <input type="hidden" #selection> -->
 
-  <!-- <div class="card-container">
+<!-- <div class="card-container">
     <div class="card card-small" (click)="selection.value = 'component'" tabindex="0">
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
@@ -163,8 +163,8 @@
     </div>
   </div> -->
 
-  <!-- Terminal -->
-  <!-- <div class="terminal" [ngSwitch]="selection.value">
+<!-- Terminal -->
+<!-- <div class="terminal" [ngSwitch]="selection.value">
     <pre *ngSwitchDefault>ng generate component xyz</pre>
     <pre *ngSwitchCase="'material'">ng add @angular/material</pre>
     <pre *ngSwitchCase="'pwa'">ng add @angular/pwa</pre>
@@ -173,8 +173,8 @@
     <pre *ngSwitchCase="'build'">ng build --prod</pre>
   </div> -->
 
-  <!-- Links -->
-  <!-- <div class="card-container">
+<!-- Links -->
+<!-- <div class="card-container">
     <a class="circle-link" title="Animations" href="https://angular.io/guide/animations" target="_blank" rel="noopener">
       <svg id="Group_20" data-name="Group 20" xmlns="http://www.w3.org/2000/svg" width="21.813" height="23.453"
         viewBox="0 0 21.813 23.453">
@@ -250,8 +250,8 @@
     </a>
   </div> -->
 
-  <!-- Footer -->
-  <!-- <footer>
+<!-- Footer -->
+<!-- <footer>
     Love Angular?&nbsp;
     <a href="https://github.com/angular/angular" target="_blank" rel="noopener"> Give our repo a star.
       <div class="github-star-badge">
@@ -270,7 +270,7 @@
     </a>
   </footer> -->
 
-  <!-- <svg id="clouds" xmlns="http://www.w3.org/2000/svg" width="2611.084" height="485.677" viewBox="0 0 2611.084 485.677">
+<!-- <svg id="clouds" xmlns="http://www.w3.org/2000/svg" width="2611.084" height="485.677" viewBox="0 0 2611.084 485.677">
     <title>Gray Clouds Background</title>
     <path id="Path_39" data-name="Path 39"
       d="M2379.709,863.793c10-93-77-171-168-149-52-114-225-105-264,15-75,3-140,59-152,133-30,2.83-66.725,9.829-93.5,26.25-26.771-16.421-63.5-23.42-93.5-26.25-12-74-77-130-152-133-39-120-212-129-264-15-54.084-13.075-106.753,9.173-138.488,48.9-31.734-39.726-84.4-61.974-138.487-48.9-52-114-225-105-264,15a162.027,162.027,0,0,0-103.147,43.044c-30.633-45.365-87.1-72.091-145.206-58.044-52-114-225-105-264,15-75,3-140,59-152,133-53,5-127,23-130,83-2,42,35,72,70,86,49,20,106,18,157,5a165.625,165.625,0,0,0,120,0c47,94,178,113,251,33,61.112,8.015,113.854-5.72,150.492-29.764a165.62,165.62,0,0,0,110.861-3.236c47,94,178,113,251,33,31.385,4.116,60.563,2.495,86.487-3.311,25.924,5.806,55.1,7.427,86.488,3.311,73,80,204,61,251-33a165.625,165.625,0,0,0,120,0c51,13,108,15,157-5a147.188,147.188,0,0,0,33.5-18.694,147.217,147.217,0,0,0,33.5,18.694c49,20,106,18,157,5a165.625,165.625,0,0,0,120,0c47,94,178,113,251,33C2446.709,1093.793,2554.709,922.793,2379.709,863.793Z"
@@ -287,4 +287,11 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<!-- <div class="main-container"> -->
+<div class="loader page-title-header-format" *ngIf="isLoaderShow">
+  <b>Loading... &nbsp;</b>
+  <div class="spinner"></div>
+</div>
+<!-- <router-menu></router-menu> -->
 <router-outlet></router-outlet>
+<!-- </div> -->
