--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -69,5 +69,42 @@ body {
 	background: repeating-linear-gradient(45deg, #606dbc, #606dbc 10px, #465298 10px, #465298 20px);
 }
 
-/* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+.loader {
+	position: fixed;
+	z-index: 99;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	opacity: 0.7;
+}
+
+.loader > img {
+	width: 100px;
+}
+
+.loader.hidden {
+	animation: fadeOut 1s;
+	animation-fill-mode: forwards;
+}
+
+.page-title-header-format {
+	font-size: 18px;
+	font-weight: 600;
+	font-family: "Roboto";
+}
+
+.spinner {
+	border: 4px solid grey; /* Light grey */
+	border-top: 4px solid #c72032; /* Blue */
+	border-radius: 50%;
+	width: 60px;
+	height: 60px;
+	animation: spin 2s linear infinite;
+	background: white;
+	z-index: 100;
+}
