--- a/src/views/home/home.component.html
+++ b/src/views/home/home.component.html
@@ -14,6 +14,7 @@
           </a>
         </span>
         {{emailId}}
+        <app-counter></app-counter>
         <router-outlet></router-outlet>
       </main>
     </mat-sidenav-content>
