ngrx part 4 - create selector

--- a/src/components/counter/custom-counter-input/custom-counter-input.component.html
+++ b/src/components/counter/custom-counter-input/custom-counter-input.component.html
@@ -1,4 +1,9 @@
 <div>
-  <input type="text" placeholder="Enter value" [(ngModel)]="value"/>
+  <div class="mt-3">{{ channelName }}</div>
+  <input type="text" placeholder="Enter value" [(ngModel)]="value" />
   <button class="btn btn-primary" (click)="onAdd()">Add to counter</button>
+</div>
+
+<div>
+    <button (click)="onChangeChannelName()">Change Channel Name</button>
 </div>
