ngrx-part6 create counter module

--- a/src/components/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/components/navigation/sidenav-list/sidenav-list.component.html
@@ -5,6 +5,9 @@
     <a mat-list-item routerLink="/home/my-profile" (click)="onSidenavClose()">
         <i class="fa fa-user-circle icon"></i> <span class="nav-caption">My Profile</span>
     </a>
+    <a mat-list-item routerLink="/home/counter" (click)="onSidenavClose()">
+        <i class="fa fa-user-circle icon"></i> <span class="nav-caption">Counter</span>
+    </a>
     <mat-list-item [matMenuTriggerFor]="menu">
         <i class="fa fa-tasks icon"></i>&nbsp; <a matline>Project</a>
     </mat-list-item>
