ngrx part 8 - update state data

--- a/src/views/posts/home/post.component.html
+++ b/src/views/posts/home/post.component.html
@@ -16,6 +16,7 @@
             <th>Id</th>
             <th>Title</th>
             <th>Description</th>
+            <th>Action</th>
           </tr>
         </thead>
         <tbody>
@@ -23,6 +24,14 @@
             <td>{{ post.id }}</td>
             <td>{{ post.title }}</td>
             <td>{{ post.description }}</td>
+            <td>
+              <a
+                href=""
+                class="btn btn-primary"
+                [routerLink]="['edit', post.id]"
+                >Update</a
+              >
+            </td>
           </tr>
         </tbody>
       </table>
