--- a/src/views/posts/home/post.component.html
+++ b/src/views/posts/home/post.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-8">
+    <div class="col-lg-12">
       <h3>Posts Lists</h3>
       <div>
         <a
@@ -30,14 +30,14 @@
                 class="btn btn-primary"
                 [routerLink]="['edit', post.id]"
                 >Update</a
-              >
+              >&nbsp;
+              <button class="btn btn-danger" (click)="onDeletePost(post.id)">
+                Delete
+              </button>
             </td>
           </tr>
         </tbody>
       </table>
-    </div>
-    <div class="col-lg-4">
-      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
