--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -289,7 +289,7 @@
 
 <!-- <div class="main-container"> -->
 <div class="loader page-title-header-format" *ngIf="isLoaderShow">
-  <b>Loading... &nbsp;</b>
+  <!-- <b>Loading... &nbsp;</b> -->
   <div class="spinner"></div>
 </div>
 <!-- <router-menu></router-menu> -->
