--- a/src/views/home/home.component.html
+++ b/src/views/home/home.component.html
@@ -13,7 +13,7 @@
             Follow @ireaderinokun
           </a>
         </span>
-        {{emailId}}
+        <!-- {{emailId}} -->
         <router-outlet></router-outlet>
       </main>
     </mat-sidenav-content>
