--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -76,7 +76,7 @@ body {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: white;
+	background: #c8bfbf;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -98,13 +98,48 @@ body {
 	font-family: "Roboto";
 }
 
+// .spinner {
+// 	border: 4px solid grey; /* Light grey */
+// 	border-top: 4px solid #c72032; /* Blue */
+// 	border-radius: 50%;
+// 	width: 60px;
+// 	height: 60px;
+// 	animation: spin 2s linear infinite;
+// 	background: white;
+// 	z-index: 100;
+// }
+
 .spinner {
-	border: 4px solid grey; /* Light grey */
-	border-top: 4px solid #c72032; /* Blue */
+	display: flex;
+	position: relative;
+	width: 80px;
+	height: 80px;
+	// animation: spin 2s linear infinite;
+	background: #c8bfbf;
+	// z-index: 100;
+}
+.spinner:after {
+	content: " ";
+	display: fixed;
 	border-radius: 50%;
-	width: 60px;
-	height: 60px;
-	animation: spin 2s linear infinite;
-	background: white;
-	z-index: 100;
+	width: 0;
+	height: 0;
+	margin: 8px;
+	box-sizing: border-box;
+	border: 32px solid black;
+	border-color: #28a745 transparent #fff transparent;
+	animation: spinner 1.2s infinite;
+}
+@keyframes spinner {
+	0% {
+		transform: rotate(0);
+		animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+	}
+	50% {
+		transform: rotate(900deg);
+		animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+	}
+	100% {
+		transform: rotate(1800deg);
+	}
 }
